<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:theme="@style/SignUpTheme"
    android:background="#f5f5f5"
    android:id="@+id/create_account_layout"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:paddingTop="@dimen/bar_padding"
        android:background="#4a5569"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
                android:id="@+id/back_button_create_account"  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/back_arrow_toolbar"
        />

        <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_account_toolbar"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"/>
    </android.support.v7.widget.Toolbar>
    <include
            layout="@layout/error_message"
            android:id="@+id/errorIncl"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/create_account_msg"
                android:textAlignment="center" android:textColor="#9e9e9e"/>
    </LinearLayout>

    <EditText
            android:id="@+id/firstNameEt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/first_name_create"
            android:inputType="textPersonName"
            android:paddingEnd="15dp"
            android:paddingStart="15dp" android:textColor="#4a556b"/>

    <EditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/last_name_create"
            android:inputType="textPersonName"
            android:paddingEnd="15dp"
            android:paddingStart="15dp" android:textColor="#4a556b"/>

    <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_address_create"
            android:inputType="textEmailAddress"
            android:paddingEnd="15dp"
            android:paddingStart="15dp" android:textColor="#4a556b"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        >

        <Button
                android:id="@+id/nextCreateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:enabled="false"
                android:text="@string/next"
                android:stateListAnimator="@null"

                android:background="@drawable/button_disabled_rounded"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold" android:fontFamily="@font/roboto_medium" android:textSize="15sp"/>

        <TextView
                android:id="@+id/loginCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/have_account"
                android:textColor="#9e9e9e" android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>