<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:theme="@style/SignUpTheme"
    android:background="@color/toolbar_color"
    android:id="@+id/create_account_confirmation_layout"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/confirmation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:paddingTop="@dimen/bar_padding"
        android:background="@color/toolbar_color"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
                android:id="@+id/back_button_create_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/back_arrow_toolbar"
        />

        <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_account"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"/>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
                android:id="@+id/settingsImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/hat_blank_white_logo"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/free_hat_account"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/signing_up_microserver"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        >

        <Button
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:stateListAnimator="@null"

                android:background="@drawable/button_enabled_rounded"
                android:text="@string/confirm_button"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold" android:fontFamily="@font/roboto_medium" android:textSize="15sp"/>

        <TextView
            android:id="@+id/termsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/by_selecting_confirm_terms"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>