<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:theme="@style/SignUpTheme"
    android:id="@+id/create_account_username_layout"
    android:background="#f5f5f5"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/username_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:paddingTop="@dimen/bar_padding"
        android:background="#4a5569"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
                android:id="@+id/back_button_create_username"  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/back_arrow_toolbar"/>


        <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:text="@string/create_username_toolbar"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"/>
    </android.support.v7.widget.Toolbar>

    <include
            layout="@layout/error_message"
            android:id="@+id/errorIncl"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
                android:id="@+id/settingsImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/hat_logo_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="20dp"
            >

            <TextView
                    android:id="@+id/hatNameCreateUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/your_name"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    android:textStyle="bold" android:textColor="@color/toolbar_color"/>

            <TextView
                    android:id="@+id/hatDomainUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="hubat.net" android:textColor="#9a9a9a"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/your_microserver_name"
            android:textAlignment="center" android:textColor="#9a9a9a"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/etUsernameLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:background="@color/white_color"

    >

        <android.support.design.widget.TextInputEditText
                android:id="@+id/hatUsernameEt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:fontFamily="@font/roboto"
                android:maxLength="22"
                android:textAllCaps="false"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                android:background="@color/white_color"
                android:hint="@string/your_hat_username"
                android:inputType="textPersonName" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/username_nocaps"
            android:textAlignment="center" android:textColor="#9a9a9a"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/nextCreateUsernameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:stateListAnimator="@null"
            android:background="@drawable/button_disabled_rounded"
            android:enabled="false"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
                android:id="@+id/loginCreateUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto"
                android:text="@string/have_account"
                android:textAlignment="center" android:textColor="#9a9a9a"/>

    </LinearLayout>

</LinearLayout>