<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
              android:theme="@style/SignUpTheme"
              android:focusableInTouchMode="true"
    android:orientation="vertical"
              android:id="@+id/create_account_password_layout"
    android:background="#f5f5f5">

    <android.support.v7.widget.Toolbar
        android:id="@+id/password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:paddingTop="@dimen/bar_padding"
        android:background="#4a5569"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
                android:id="@+id/back_button_create_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/back_arrow_toolbar"/>

        <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_password_toolbar"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"/>
    </android.support.v7.widget.Toolbar>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/password_must_marked"
            android:textAlignment="center" android:textColor="#9e9e9e"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:background="@color/white_color"
    >

        <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@color/white_color"
                android:hint="@string/your_password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" android:gravity="center_horizontal"
                  android:layout_marginEnd="10dp"
                  android:layout_marginStart="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/passwordProgress1"
                    android:layout_height="5dp"
                    android:background="@color/passwordStrengthDefault"/>

            <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:id="@+id/passwordProgress2"
                    android:layout_height="5dp"
                    android:background="@color/passwordStrengthDefault"/>

            <ImageView
                    android:id="@+id/passwordProgress3"
                    android:layout_marginStart="10dp"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="5dp"
                    android:background="@color/passwordStrengthDefault"/>

            <ImageView
                    android:id="@+id/passwordProgress4"
                    android:layout_marginStart="10dp"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="5dp"
                    android:background="@color/passwordStrengthDefault"/>
        </LinearLayout>

        <TextView
                android:id="@+id/strongScoreTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="5dp"
                android:textStyle="bold" android:textAlignment="textEnd"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/data_is_precious"
            android:textAlignment="textStart" android:textColor="#9e9e9e"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/example_password"
            android:textAlignment="textStart" android:textColor="#9e9e9e"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/combination_words"
            android:textAlignment="textStart" android:textColor="#9e9e9e"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/nextCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_disabled_rounded"
            android:enabled="false"
            android:text="@string/next"
            android:stateListAnimator="@null"

            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
                android:id="@+id/loginCreatePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto"
                android:text="@string/have_account"
                android:textAlignment="center" android:textColor="#9e9e9e"/>

    </LinearLayout>

</LinearLayout>